clean eclair landing

--- a/creations/commencement/index.html
+++ b/creations/commencement/index.html
@@ -175,7 +175,7 @@
                         </div>
                     </div>
                     <!-- <h2>Revue de presse</h2> -->
-                    <div class="hidden">
+                    <div class="hidden row">
                         <p class="RevueDePresse">
                             <div id="galRPcommencement">
                                 <a data-gallery="#blueimp-gallery-galRPcommencement" data-toggle="lightbox" href="media/images/revue-presse/Clou-dans-la-planche-Commencement-03-mars-2013.jpg" title="Le Clou dans la Planche - mars 2013"><img src="media/images/revue-presse/Clou-dans-la-planche-Commencement-03-mars-2013.jpg" alt="Le Clou dans la Planche" width="180"></a>
