--- a/index.html
+++ b/index.html
@@ -271,49 +271,50 @@
                                 <a data-gallery="#blueimp-gallery-galeclairs" data-toggle="lightbox" href="creations/eclairs/media/images/Cie_Mesdames_A_Dragons_2015_Bestioleshut.jpg" title="La Cité des Dragons - Bestiole chut"><img src="creations/eclairs/media/images/Cie_Mesdames_A_Dragons_2015_Bestioleshut.jpg" alt="Bestiole chut" width="180"></a>
                             </div>-->
                             </div>
-                        </div>
-                        <h3>Le spectacle</h3>
-                        <p>
-                            ÉCLAIRS propose un écrin onirique dans lequel nous suivons la quête d’une jeune femme (interprétée par la danseuse Elsa Sanchez) sur les pas de sa grand-mère, fantôme bienveillant joué par Coline Lubin. Elle y découvre sa lutte de femme libre et la folie douce de son grand-père, interprété par Éric Leclerc, comédien et slameur... Car ÉCLAIRS, c’est aussi un concert, avec une dizaine de compositions originales interprétées en direct par Aladin Chaboche, guitariste, Jean-Marc Serpin, contrebassiste, et Alice Tabart, au chant, à l’écriture et la mise en scène. Cette dernière a écrit les morceaux en même temps que la pièce, notes et mots se répondant, s’opposant, se complétant afin de créer le deuxième pôle d’énergie nécessaire à cette décharge vitale tant recherchée par les personnages.<br><br>
-                            Théâtre - musique<br>
-                            Tout public à partir de 12 ans<br>
-                            Durée 1h20<br>
-                        </p>
-                        <h3>Équipe de création</h3>
-                        <p class="equip-crea">
-                            <span class="label-equipe-crea">Écriture, mise en scène /</span> Alice Tabart
-                            <br>
-                            <span class="label-equipe-crea">Interprétation /</span> Aladin Chaboche, Éric Leclerc, Coline Lubin, Elsa Sanchez, Jean-Marc Serpin &amp; Alice Tabart
-                            <br>
-                            <span class="label-equipe-crea">Scénographie et accessoires /</span> Claire Balerdi &amp; Emmanuel Borgetto
-                            <br>
-                            <span class="label-equipe-crea">Stagiaires scénographie /</span> Lucie Chauvin
-                            <br>
-                            <span class="label-equipe-crea">Costumes /</span> Charlotte Pecquenard
-                            <br>
-                            <span class="label-equipe-crea">Création lumière /</span> Serena Andreasi
-                            <br>
-                            <span class="label-equipe-crea">Création sonore /</span> Tom Hatcher
-                            <br>
-                            <span class="label-equipe-crea">Affiche /</span> Kämy Dobï
-                            <br>
-                            <span class="label-equipe-crea">Attachée à l’administration et à la production /</span> Mathilde Ratajczyk
-                            <br>
-                        </p>
-                        <h3>Production</h3>
-                        <p class="production">
-                            Une production de la Compagnie Mesdames A avec le soutien de Tarbes en scène, du Théâtre du Ring, de La Mairie de Toulouse (aide au projet), de la Commune de Sévérac d’Aveyron, de la SPEDIDAM, de la Fondation Empanda, du Conseil Départemental de la Haute-Garonne (aide à la création) et du Conseil Régional de l’Occitanie (aide à la création et appel à projet Egalité F/H).<br>
-                            Nous remercions également le Théâtre Jules Julien, la MJC des Ponts Jumeaux et la MJC Empalot.
-                            <br>
-                            <br> Plus de details sur l’équipe et la production dans:
-                            <br>
-                            <ul class="production">
-                                <li>le <a href="creations/eclairs/media/PDF/dossier-ECLAIRS-cie-mesdames-a.pdf">Dossier de communication</a>
-                                </li>
-                                <li>la <a data-bs-toggle="modal" href="#modal-dates-eclairs">liste des dates</a></li>
-                            </ul>
-                        </p>
-                        <!--
+                            <h3>Le spectacle</h3>
+                            <p>
+                                ÉCLAIRS propose un écrin onirique dans lequel nous suivons la quête d’une jeune femme (interprétée par la danseuse Elsa Sanchez) sur les pas de sa grand-mère, fantôme bienveillant joué par Coline Lubin. Elle y découvre sa lutte de femme libre et la folie douce de son grand-père, interprété par Éric Leclerc, comédien et slameur... Car ÉCLAIRS, c’est aussi un concert, avec une dizaine de compositions originales interprétées en direct par Aladin Chaboche, guitariste, Jean-Marc Serpin, contrebassiste, et Alice Tabart, au chant, à l’écriture et la mise en scène. Cette dernière a écrit les morceaux en même temps que la pièce, notes et mots se répondant, s’opposant, se complétant afin de créer le deuxième pôle d’énergie nécessaire à cette décharge vitale tant recherchée par les personnages.<br><br>
+                                Théâtre - musique<br>
+                                Tout public à partir de 12 ans<br>
+                                Durée 1h20<br>
+                            </p>
+                            <h3>Équipe de création</h3>
+                            <p class="equip-crea">
+                                <span class="label-equipe-crea">Écriture, mise en scène /</span> Alice Tabart
+                                <br>
+                                <span class="label-equipe-crea">Interprétation /</span> Aladin Chaboche, Éric Leclerc, Coline Lubin, Elsa Sanchez, Jean-Marc Serpin &amp; Alice Tabart
+                                <br>
+                                <span class="label-equipe-crea">Scénographie et accessoires /</span> Claire Balerdi &amp; Emmanuel Borgetto
+                                <br>
+                                <span class="label-equipe-crea">Stagiaires scénographie /</span> Lucie Chauvin
+                                <br>
+                                <span class="label-equipe-crea">Costumes /</span> Charlotte Pecquenard
+                                <br>
+                                <span class="label-equipe-crea">Création lumière /</span> Serena Andreasi
+                                <br>
+                                <span class="label-equipe-crea">Création sonore /</span> Tom Hatcher
+                                <br>
+                                <span class="label-equipe-crea">Affiche /</span> Kämy Dobï
+                                <br>
+                                <span class="label-equipe-crea">Attachée à l’administration et à la production /</span> Mathilde Ratajczyk
+                                <br>
+                            </p>
+                            <h3>Production</h3>
+                            <p class="production">
+                                Une production de la Compagnie Mesdames A avec le soutien de Tarbes en scène, du Théâtre du Ring, de La Mairie de Toulouse (aide au projet), de la Commune de Sévérac d’Aveyron, de la SPEDIDAM, de la Fondation Empanda, du Conseil Départemental de la Haute-Garonne (aide à la création) et du Conseil Régional de l’Occitanie (aide à la création et appel à projet Egalité F/H).<br>
+                                Nous remercions également le Théâtre Jules Julien, la MJC des Ponts Jumeaux et la MJC Empalot.
+                                <br><br>
+                                <a data-bs-toggle="modal" href="#modal-dates-eclairs">Dates passées</a></p>
+                           <!--      <br>
+                                <br> Plus de details sur l’équipe et la production dans:
+                                <br>
+                                <ul class="production">
+                                    <li>le <a href="creations/eclairs/media/PDF/dossier-ECLAIRS-cie-mesdames-a.pdf">Dossier de communication</a>
+                                    </li>
+                                    <li>la <a data-bs-toggle="modal" href="#modal-dates-eclairs">liste des dates</a></li>
+                                </ul>
+                            </p> -->
+                            <!--
                                 <div id="revue-presse-eclairs-modal-lg" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="RevueDePresse" aria-hidden="false">
                                     <div class="modal-dialog modal-lg">
                                         <div class="modal-content bg-dark text-white">
@@ -361,31 +362,35 @@
                                 });
                                 </script>
                                 -->
-                        <!-- Modal dates passees -->
-                        <div id="modal-dates-eclairs" class="modal fade" role="dialog">
-                            <div class="modal-dialog">
-                                <!-- Modal content-->
-                                <div class="modal-content bg-dark text-white">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title">Dates - <i>ÉCLAIRS</i></h4>
-                                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
-                                    </div>
-                                    <div class="modal-body dates-passees">
-                                        <ul>
-                                            <li><b>2018</b></li>
-                                            <li>- 09 au 14 octobre, Le Pari, Tarbes (81)</li>
-                                            <li>- 27 octobre, Lapanouse (12)</li>
-                                            <li>- 08 décembre, Villasavary (11)</li>
-                                            <li><b>2019</b></li>
-                                            <li>- 25 janvier, Escalquens (31)</li>
-                                            <li>- 11 au 13 avril, Le Ring, Toulouse (31)</li>
-                                            <li>- 02 novembre, Labastide Saint Sernin (31)</li>
-                                            <li>- 30 novembre, Villasavary (11)</li>
-                                        </ul>
+                            <!-- Modal dates passees -->
+                            <div id="modal-dates-eclairs" class="modal fade" role="dialog">
+                                <div class="modal-dialog">
+                                    <!-- Modal content-->
+                                    <div class="modal-content bg-dark text-white">
+                                        <div class="modal-header">
+                                            <h4 class="modal-title">Dates - <i>ÉCLAIRS</i></h4>
+                                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                                        </div>
+                                        <div class="modal-body dates-passees">
+                                            <ul>
+                                                <li><b>2018</b></li>
+                                                <li>- 09 au 14 octobre, Le Pari, Tarbes (81)</li>
+                                                <li>- 27 octobre, Lapanouse (12)</li>
+                                                <li>- 08 décembre, Villasavary (11)</li>
+                                                <li><b>2019</b></li>
+                                                <li>- 25 janvier, Escalquens (31)</li>
+                                                <li>- 11 au 13 avril, Le Ring, Toulouse (31)</li>
+                                                <li>- 02 novembre, Labastide Saint Sernin (31)</li>
+                                                <li>- 30 novembre, Villasavary (11)</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col g-5"></div>
                     </div>
                     <div class="deck-of-cards-creations">
                         <div class="row row-cols-1 g-4 mb-4">
