ajouts cromwell et modifs

--- a/creations/commencement/index.html
+++ b/creations/commencement/index.html
@@ -147,31 +147,35 @@
                         </div>
                     </div>
                     <!-- dates passees -->
-                    <!-- <h2>Dates</h2> -->
-                    <div class="hidden row">
-                        <div class="col-auto col-md-8 col-xl-9">
+                    <h2>Dates</h2>
+                    <div class="row">
+                        <div class="col-auto col-md-8">
                             <div class="dates-passees">
                                 <ul>
-                                    <li><b>2014</b></li>
-                                    <li>- MJC L'Isle-Jourdain - Gers</li>
-                                    <br>
+                                    <li><b>2024</b></li>
+                                    <li>- 18 mai : Archéosite de Montans (81)</li>
+                                    <!-- <br>
                                     <li><b>2013</b></li>
-                                    <li>- 1er juin: Halles de Villasavary - Aude</li>
-                                    <li>- 30 mars: Salle du Foyer Rural - CLARAC</li>
-                                    <li>- 22 mars: Mix'art Myrys - Toulouse (31) - Soirée Grèce et Démocratie avec le Collectif Ciné 2000</li>
-                                    <li>- 21 février au 2 mars: Théâtre de la Violette - Toulouse (31)</li>
+                                    <li>- 1er juin : Halles de Villasavary - Aude</li>
+                                    <li>- 30 mars : Salle du Foyer Rural - CLARAC</li>
+                                    <li>- 22 mars : Mix'art Myrys - Toulouse (31) - Soirée Grèce et Démocratie avec le Collectif Ciné 2000</li>
+                                    <li>- 21 février au 2 mars : Théâtre de la Violette - Toulouse (31)</li>
                                     <br>
                                     <li><b>2012</b></li>
-                                    <li>- 24 août: Cour d'honneur - Séverac le Château (12)</li>
-                                    <li>- 16 juin: Lapanouse - Aveyron (12)</li>
-                                    <li>- 13 avril: Théâtre des Trois Ponts - Castelnaudary</li>
-                                    <li>- 31 mars : La Maison de la Terre à 21h - Poucharramet</li>
+                                    <li>- 24 août : Cour d'honneur - Séverac le Château (12)</li>
+                                    <li>- 16 juin : Lapanouse - Aveyron (12)</li>
+                                    <li>- 13 avril : Théâtre des Trois Ponts - Castelnaudary</li>
+                                    <li>- 31 mars : La Maison de la Terre à 21h - Poucharramet</li> -->
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-auto col-md-4 col-xl-3 mx-auto">
-                            <a data-gallery="#blueimp-gallery-Affichecommencement" data-toggle="lightbox" href="media/images/CIE_MESDAMES_A_2012_Commencement_Poursuite.jpg" title="Le Commencement - Poursuite" class="text-white">
-                                <img src="media/images/affiche-commencement.jpg" alt="Commencement Affiche" class="img-fluid affiche-commencement"></a>
+                        <div class="col-auto col-md-4 mx-auto">
+                            <a data-gallery="#blueimp-gallery-Affichecommencement" data-toggle="lightbox" href="media/images/00-affiche-commencement.png_960.webp" title="Le Commencement - Poursuite" class="text-white">
+                                <picture>
+                                    <source src="media/images/00-affiche-commencement.png_720.webp" type="">
+                                </picture>
+                                <img src="media/images/00-affiche-commencement.jpeg" alt="Commencement Affiche" class="img-fluid affiche-commencement">
+                            </a>
                         </div>
                     </div>
                     <!-- <h2>Revue de presse</h2> -->
