--- a/creations/voyages/index.html
+++ b/creations/voyages/index.html
@@ -79,7 +79,7 @@
                         <p>
                             Pour chacun de ces voyages temporels, deux comédien·ne·s mettent en jeu des personnages hauts en couleur pour animer vos espaces patrimoniaux. Ludiques, originaux et dynamiques, ces voyages s'appuient sur les outils du théâtre pour rendre l'Histoire accessible aux petits et aux grands. Riches d'une grande rigueur historique, ils feront voler en éclats les clichés sur chaque époque. Les comédien·ne·s entraînent le public dans une ambiance unique et lui font vivre une expérience inoubliable !</p>
                         <!--Video-->
-                        <div class="ratio ratio-16x9">
+                        <div class="hidden ratio ratio-16x9">
                             <iframe src="https://www.youtube.com/embed/cIMh0o2Rmq8" title="Voyages dans le temps"></iframe>
                         </div>
                         <h2>Les Voyages</h2>
