--- a/creations/monologue/index.html
+++ b/creations/monologue/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </section>
-         <!-- <nav class="navbar navbar-dark fixed-top" id="MA-navbar-creation">
+    <!-- <nav class="navbar navbar-dark fixed-top" id="MA-navbar-creation">
         <a class="navbar-brand page-scroll" href="#page-top"><img class=img-fluid id="logo" src="./../../media/images/LogoCompagnieMa.svg"></a>
 
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0 smooth-scroll">
@@ -91,7 +91,7 @@
                         <h1>Le Monologue d'une Tueuse</h1>
                         <p><small>Saison 2010-2011</small></p>
                         <!--Video-->
-                   <!--      <div class="embed-responsive embed-responsive-16by9">
+                        <!--      <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/182462293"></iframe>
                         </div> -->
                         <p>
@@ -132,14 +132,14 @@
                             La forme du monologue évite à cette figure d'être le faire-valoir d'un héros ou d'une institution quelconque. Elle est simplement accompagnée d'une ombre, une conscience, personnage manipulateur-manipulé qui l'assiste tout au long de ses aveux. Ainsi, dans sa parole solitaire, la tueuse nous révèle plus profondément son rapport au monde.
                         </p>
                         <p class="text-center"><small><i>Une femme seule, fait face à sa conscience (personnifiée) et à nos jugements.<br>
-                                Elle nous dit qui elle a tué et pourquoi.<br>
-                                Elle nous dit son absence de colère et sa paix intérieure. Simplement.<br>
-                                Mais elle ne nous dit pas comment elle tue.<br>
-                                Elle nous questionne : qui sommes-nous, nous à qui elle parle ?<br>
-                                Sommes-nous là ? Sommes-nous elle ?<br>
-                                Pouvons nous accepter ses raisons et ses motivations ?<br>
-                                Souvent, aussi, elle nous traite de moutons.<br>
-                            </i></small></p>
+                                    Elle nous dit qui elle a tué et pourquoi.<br>
+                                    Elle nous dit son absence de colère et sa paix intérieure. Simplement.<br>
+                                    Mais elle ne nous dit pas comment elle tue.<br>
+                                    Elle nous questionne : qui sommes-nous, nous à qui elle parle ?<br>
+                                    Sommes-nous là ? Sommes-nous elle ?<br>
+                                    Pouvons nous accepter ses raisons et ses motivations ?<br>
+                                    Souvent, aussi, elle nous traite de moutons.<br>
+                                </i></small></p>
                         <h2>Équipe de création</h2>
                         <p class="equip-crea">
                             <span class="label-equipe-crea">Écriture, mise en scène &amp; costumes /</span> Alice Tabart
@@ -153,64 +153,68 @@
                         <p class="production">
                             <p>Une production de la <a href="https://mesdames-a.fr">compagnie Mesdames A</a> en partenariat avec le Théâtre du Fil à Plomb.</p>
                             <!-- Retrouvez plus de détails&nbsp; dans le <a href="media/PDF/dossier-presse-monologue-tueuse.pdf">dossier de communication</a>-->
-                        <h2>Revue de presse</h2>
-                        <p class="RevueDePresse">
-                            <div id="galRPdragons">
-                                <a data-gallery="#blueimp-gallery-galRPdragons" href="media/images/revue-presse/Clou-dans-la-planche-31-janvier-2011.jpg" title="Le Clou dans la Planche, par Mathilde Lacroix, janvier 2011"><img src="media/images/revue-presse/Clou-dans-la-planche-31-janvier-2011.jpg" alt="Le Clou dans la Planche" width="180"></a>
-                                <a data-gallery="#blueimp-gallery-galRPdragons" href="media/images/revue-presse/actu-toulouse-15-fevrier-2011-Fany-Moulin.jpg" title="Le Brigadier, par Fany Moulin, février 2011"><img src="media/images/revue-presse/actu-toulouse-15-fevrier-2011-Fany-Moulin.jpg" alt="Le Brigadier" width="180"></a>
-                                <a data-gallery="#blueimp-gallery-galRPdragons" title=" L'émission de Radio : Le Mag culturel sur Campus FM le lundi 24 janvier 2011"> <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/V9N2njPPUkg?html5=1" width="180"></iframe>
-                                   </a>
-                            </div>
-                            <!--stop video when close modal-->
-                            <script async>
-                            $("#revue-presse-monologue-modal-lg").on('hidden.bs.modal', function(e) {
-                                var $this = $(this);
-                                var $frame = $this.find('iframe');
-                                $frame.attr("src", $frame.attr("src"));
-                            });
-                            </script>
+                            <h2>Revue de presse</h2>
+                            <p class="RevueDePresse">
+                                <div id="galRPdragons">
+                                    <a data-gallery="#blueimp-gallery-galRPdragons" href="media/images/revue-presse/Clou-dans-la-planche-31-janvier-2011.jpg" title="Le Clou dans la Planche, par Mathilde Lacroix, janvier 2011"><img src="media/images/revue-presse/Clou-dans-la-planche-31-janvier-2011.jpg" alt="Le Clou dans la Planche" width="180"></a>
+                                    <a data-gallery="#blueimp-gallery-galRPdragons" href="media/images/revue-presse/actu-toulouse-15-fevrier-2011-Fany-Moulin.jpg" title="Le Brigadier, par Fany Moulin, février 2011"><img src="media/images/revue-presse/actu-toulouse-15-fevrier-2011-Fany-Moulin.jpg" alt="Le Brigadier" width="180"></a>
+                                    <a data-gallery="#blueimp-gallery-galRPdragons" title=" L'émission de Radio : Le Mag culturel sur Campus FM le lundi 24 janvier 2011"> <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/V9N2njPPUkg?html5=1" width="180"></iframe>
+                                    </a>
+                                </div>
+                                <!--stop video when close modal-->
+                                <script async>
+                                $("#revue-presse-monologue-modal-lg").on('hidden.bs.modal', function(e) {
+                                    var $this = $(this);
+                                    var $frame = $this.find('iframe');
+                                    $frame.attr("src", $frame.attr("src"));
+                                });
+                                </script>
+                            </p>
                         </p>
                         <!-- Modal dates passees -->
                         <h2>Dates</h2>
-                        <div class="dates-passees">
-                            <ul>
-                                <li><b>2011</b></li>
-                                <li>- Du 28 juin au 2 juillet: Théâtre le Fil à Plomb - Toulouse (31)</li>
-                                <li>- 18 février: Le Préau - La Salvetat Saint Gilles</li>
-                                <li>- 30 janvier: Théâtre du Fil à Plomb - Toulouse(31)</li>
-                                <br>
-                                <li><b>2010</b></li>
-                                <li>- 3 et 4 décembre: Café théâtre - Le Burgaud </li>
-                                <div>
-                                    
-                            <a href="media/images/Affiche_Monologue_.jpg" title="Le Monologue d'une Tueuse - Affiche" data-gallery="#blueimp-gallery-galmonologue" data-toggle="lightbox">
-                                <img class="img-thumbnail" src="media/images/sm_Affiche_Monologue_.jpg" alt="Le Monologue d'une Tueuse - Danse">
-                            </a>
+                        <div class="row">
+                            <div class="col-auto col-md-8">
+                                <div class="dates-passees text-white">
+                                    <ul>
+                                        <li><b>2011</b></li>
+                                        <li>- Du 28 juin au 2 juillet: Théâtre le Fil à Plomb - Toulouse (31)</li>
+                                        <li>- 18 février: Le Préau - La Salvetat Saint Gilles</li>
+                                        <li>- 30 janvier: Théâtre du Fil à Plomb - Toulouse(31)</li>
+                                        <br>
+                                        <li><b>2010</b></li>
+                                        <li>- 3 et 4 décembre: Café théâtre - Le Burgaud </li>
+                                        <div>
+                                        </div>
+                                    </ul>
                                 </div>
+                            </div>
+                            <div class="col-auto col-md-4 mx-auto">
+                                <a data-gallery="#blueimp-gallery-Affichecommencement" data-toggle="lightbox" href="media/images/Affiche_Monologue_.jpg" title="Le Monologue d'une Tueuse - Affiche" class="text-white">
+                                    <img class="img-thumbnail" src="media/images/sm_Affiche_Monologue_.jpg" alt="Le Monologue d'une Tueuse - Danse">
+                                </a>
+                            </div>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <hr>
+                        <div class="logo-contact">
+                            <ul class="social-network social-circle">
+                                <li><a href="http://www.facebook.com/Compagnie-Mesdames-a-161213841387/" class="icoFacebook" title="Facebook"><i class="fab fa-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/Mesdames_A" class="icoTwitter" title="Twitter"><i class="fab fa-twitter"></i></a></li>
                             </ul>
                         </div>
-                        <!-- </div> -->
-                    </div>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <hr>
-                    <div class="logo-contact">
-                        <ul class="social-network social-circle">
-                            <li><a href="http://www.facebook.com/Compagnie-Mesdames-a-161213841387/" class="icoFacebook" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-                            <li><a href="https://twitter.com/Mesdames_A" class="icoTwitter" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="adresse-internet">
-                        <p class="text-center">
-                            <a href="http://mesdames-a.fr">www.mesdames-a.fr</a>
-                        </p>
+                        <div class="adresse-internet">
+                            <p class="text-center">
+                                <a href="http://mesdames-a.fr">www.mesdames-a.fr</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </section>
 </body>
@@ -221,7 +225,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
-
 <script src="./../../js/jquery.blueimp-gallery.min.js"></script>
 <!-- Scrolling Nav JavaScript -->
 <!--scrolling-nav.js-->
