disable link eclair

--- a/index.html
+++ b/index.html
@@ -470,7 +470,8 @@
                                     <div class="card-body">
                                         <p class="card-text"><small><i>théâtre-concert-danse</i></small><br>
                                             Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père...<br>
-                                            <a href="#eclairs" class="link-creation stretched-link">Voir plus&nbsp;&nbsp;<i class="fa-solid fa-circle-right"></i></a> </p>
+                                            <!-- <a href="#eclairs" class="link-creation stretched-link">Voir plus&nbsp;&nbsp;<i class="fa-solid fa-circle-right"></i></a> -->
+                                        </p>
                                     </div>
                                 </div>
                             </div>
