--- a/index.html
+++ b/index.html
@@ -81,8 +81,12 @@
                 <div class="col-sm-10 offset-sm-1">
                     <div class="row">
                         <div class="col-md-9 col-xl-7 offset-xl-2">
-                            <p class="intro-text text-center">En 23/24, la compagnie poursuit la diffusion du <a href="creations/commencement/index.html"><i>Commencement</i></a> et se lance dans un projet-fleuve&nbsp;: monter pour la première fois <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a> de Victor Hugo.
-                            </p>
+                            <p class="intro-text text-center">En 23/24, la compagnie, poursuit la diffusion du <a href="creations/commencement/index.html"><i>Commencement</i></a> et se lance dans un projet-fleuve&nbsp;: monter pour la première fois <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a> de Victor Hugo.</p><br>
+                            <!-- <p>Prochaines dates</p> -->
+                                <ul class="text-white ">
+                                    <li class=""><i>Le Commencement</i> le 18 mai à Montans (81)</li>
+                                    <li class=""><i>Cromwell</i> les 12, 14 et 16 août au Château de Sévérac (12)</li>
+                                </ul>
                             <!-- <p class="intro-text text-center">
     <br>Découvrez nos <a href="./creations/voyages/index.html"><i>Voyages dans le temps</i></a> et <a href="creations/commencement/index.html"><i>Le Commencement</i></a>.
     https://www.millavois.com/2023/08/14/severac-le-commencement-un-spectacle-entre-histoire-et-science-fiction-qui-vous-fera-redecouvrir-le-chateau/
